src/objects/fc_csc__Field_Map__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Date_Format__c</fullName>
        <label>Date Format</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Object_Map__c</fullName>
        <label>Object Map</label>
        <referenceTo>fc_csc__Object_Map__c</referenceTo>
        <relationshipLabel>Field Maps</relationshipLabel>
        <relationshipName>Field_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fc_csc__Prefix__c</fullName>
        <label>Prefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Target_Field__c</fullName>
        <label>Target Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Map</label>
    <listViews>
        <fullName>fc_csc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Field Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>